force-app/main/default/objects/Account/fields/AccionCrediticia__c.field-meta.xml
<CustomField>
    <fullName>AccionCrediticia__c</fullName>
    <label>Código de acción crediticia del cliente</label>
    <length>32</length>
    <type>Text</type>
</CustomField>