force-app/main/default/objects/Account/fields/Actividad_economica__c.field-meta.xml
<CustomField>
    <fullName>Actividad_economica__c</fullName>
    <label>Actividad económica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administración pública y defensa</fullName>
            </value>
            <value>
                <fullName>Agricultura / Ganadería</fullName>
            </value>
            <value>
                <fullName>Asalariado</fullName>
            </value>
            <value>
                <fullName>Banca y Seguros</fullName>
            </value>
            <value>
                <fullName>Bienes y Raíces</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Cárnica</fullName>
            </value>
            <value>
                <fullName>Casinos</fullName>
            </value>
            <value>
                <fullName>Comercio</fullName>
            </value>
            <value>
                <fullName>Construcción</fullName>
            </value>
            <value>
                <fullName>Distribución y/o Comercialización de combustible</fullName>
            </value>
            <value>
                <fullName>Energía y agua</fullName>
            </value>
            <value>
                <fullName>Enseñanza</fullName>
            </value>
            <value>
                <fullName>Explotación de minas y canteras</fullName>
            </value>
            <value>
                <fullName>Farmacéutica</fullName>
            </value>
            <value>
                <fullName>Gobierno. Es la entidad</fullName>
            </value>
            <value>
                <fullName>Hoteles y restaurantes</fullName>
            </value>
            <value>
                <fullName>Industria manufactura</fullName>
            </value>
            <value>
                <fullName>Intermediación y servicios conexos</fullName>
            </value>
            <value>
                <fullName>Mataderos Industriales</fullName>
            </value>
            <value>
                <fullName>Organizaciones no gubernamentales</fullName>
            </value>
            <value>
                <fullName>Otros servicios</fullName>
            </value>
            <value>
                <fullName>Pecuario</fullName>
            </value>
            <value>
                <fullName>Pesca y acuicultura</fullName>
            </value>
            <value>
                <fullName>Producción y Comercialización de Lácteos</fullName>
            </value>
            <value>
                <fullName>Profesional Independiente</fullName>
            </value>
            <value>
                <fullName>Propiedad de vivienda (Bienes y raices)</fullName>
            </value>
            <value>
                <fullName>Proyectos</fullName>
            </value>
            <value>
                <fullName>Micro financieras</fullName>
            </value>
            <value>
                <fullName>Religioso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>