force-app/main/default/objects/Account/fields/Actividad_economica_UDC__c.field-meta.xml
<CustomField>
    <fullName>Actividad_economica_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actividad económica</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Actividad económica</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Accounts (Actividad económica)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>