force-app/main/default/objects/Account/fields/actividadeconomicaid__c.field-meta.xml
<CustomField>
    <fullName>actividadeconomicaid__c</fullName>
    <label>actividadeconomicaid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>