force-app/main/default/objects/Account/fields/addressline1__c.field-meta.xml
<CustomField>
    <fullName>addressline1__c</fullName>
    <label>Dirección del cliente linea 1</label>
    <type>TextArea</type>
</CustomField>