force-app/main/default/objects/Account/fields/addressline2__c.field-meta.xml
<CustomField>
    <fullName>addressline2__c</fullName>
    <label>Direccion del cliente linea 2</label>
    <type>TextArea</type>
</CustomField>