force-app/main/default/objects/Account/fields/addressline3__c.field-meta.xml
<CustomField>
    <fullName>addressline3__c</fullName>
    <label>Direccion del cliente linea 3</label>
    <type>TextArea</type>
</CustomField>