force-app/main/default/objects/Account/fields/Algun_familiar_es_PEP__c.field-meta.xml
<CustomField>
    <fullName>Algun_familiar_es_PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Algún familiar es PEP?</label>
    <type>Checkbox</type>
</CustomField>