force-app/main/default/objects/Account/fields/AltIdentification2__c.field-meta.xml
<CustomField>
    <fullName>AltIdentification2__c</fullName>
    <label>Otra Identificación</label>
    <length>32</length>
    <type>Text</type>
</CustomField>