force-app/main/default/objects/Account/fields/Antiguedad_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad_del_cliente__c</fullName>
    <label>Antigüedad del cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ocasional</fullName>
            </value>
            <value>
                <fullName>Habitual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>