force-app/main/default/objects/Account/fields/Arapnetting__c.field-meta.xml
<CustomField>
    <fullName>Arapnetting__c</fullName>
    <defaultValue>&apos;N&apos;</defaultValue>
    <description>Valor por omision N</description>
    <label>Arapnetting</label>
    <length>5</length>
    <type>Text</type>
</CustomField>