force-app/main/default/objects/Account/fields/Barrio__c.field-meta.xml
<CustomField>
    <fullName>Barrio__c</fullName>
    <label>Barrio del cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>