force-app/main/default/objects/Account/fields/BUSINESSUNIT__c.field-meta.xml
<CustomField>
    <fullName>BUSINESSUNIT__c</fullName>
    <label>Unidad de negocio WS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>