force-app/main/default/objects/Account/fields/C_rdobas__c.field-meta.xml
<CustomField>
    <fullName>C_rdobas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Córdobas</label>
    <type>Checkbox</type>
</CustomField>