force-app/main/default/objects/Account/fields/Campo_auxiliar_para_cambios__c.field-meta.xml
<CustomField>
    <fullName>Campo_auxiliar_para_cambios__c</fullName>
    <label>Campo auxiliar para cambios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>