force-app/main/default/objects/Account/fields/Cargo_PEP__c.field-meta.xml
<CustomField>
    <fullName>Cargo_PEP__c</fullName>
    <label>Cargo que ocupa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>