force-app/main/default/objects/Account/fields/Cargo_PEP_del_familiar__c.field-meta.xml
<CustomField>
    <fullName>Cargo_PEP_del_familiar__c</fullName>
    <label>Cargo PEP del familiar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>