force-app/main/default/objects/Account/fields/Categoria_12__c.field-meta.xml
<CustomField>
    <fullName>Categoria_12__c</fullName>
    <label>Categoría 12</label>
    <length>32</length>
    <type>Text</type>
</CustomField>