force-app/main/default/objects/Account/fields/Categoria_19__c.field-meta.xml
<CustomField>
    <fullName>Categoria_19__c</fullName>
    <label>Categoría 19</label>
    <length>16</length>
    <type>Text</type>
</CustomField>