force-app/main/default/objects/Account/fields/Categoria_20__c.field-meta.xml
<CustomField>
    <fullName>Categoria_20__c</fullName>
    <label>Categoría 20</label>
    <length>16</length>
    <type>Text</type>
</CustomField>