force-app/main/default/objects/Account/fields/Categoria_26_UDC__c.field-meta.xml
<CustomField>
    <fullName>Categoria_26_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ruta de cobro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Categoria 26</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Cuentas (Ruta de cobro)</relationshipLabel>
    <relationshipName>Cuentas6</relationshipName>
    <type>Lookup</type>
</CustomField>