force-app/main/default/objects/Account/fields/Categoria_8_UDC__c.field-meta.xml
<CustomField>
    <fullName>Categoria_8_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de cliente crédito</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Categoria 8</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Cuentas (Tipo de cliente credito)</relationshipLabel>
    <relationshipName>Cuentas8</relationshipName>
    <type>Lookup</type>
</CustomField>