force-app/main/default/objects/Account/fields/Categorycode001__c.field-meta.xml
<CustomField>
    <fullName>Categorycode001__c</fullName>
    <label>Categoría 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>