force-app/main/default/objects/Account/fields/categorycode002__c.field-meta.xml
<CustomField>
    <fullName>categorycode002__c</fullName>
    <label>Categoría 2</label>
    <type>TextArea</type>
</CustomField>