force-app/main/default/objects/Account/fields/Categorycode003__c.field-meta.xml
<CustomField>
    <fullName>Categorycode003__c</fullName>
    <label>Categoría 3</label>
    <length>5</length>
    <type>Text</type>
</CustomField>