force-app/main/default/objects/Account/fields/Cedula__c.field-meta.xml
<CustomField>
    <fullName>Cedula__c</fullName>
    <label>Identificación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>