force-app/main/default/objects/Account/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <description>Codigo de la ciudad, utilizado de forma auxiliar</description>
    <label>city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>