force-app/main/default/objects/Account/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Nombre de la ciudad</label>
    <length>32</length>
    <type>Text</type>
</CustomField>