force-app/main/default/objects/Account/fields/Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion__c</fullName>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Factor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TIPO DE CLIENTE</fullName>
            </value>
            <value>
                <fullName>DOC. IDENTIDAD</fullName>
            </value>
            <value>
                <fullName>PROFESIÓN</fullName>
            </value>
            <value>
                <fullName>OCUPACIÓN</fullName>
            </value>
            <value>
                <fullName>ACTIVIDAD ECONÓMICA</fullName>
            </value>
            <value>
                <fullName>ORIGEN DE LOS FONDOS</fullName>
            </value>
            <value>
                <fullName>ANTIGÜEDAD DE CLIENTE (AÑOS)</fullName>
            </value>
            <value>
                <fullName>TIPO DE CANAL</fullName>
            </value>
            <value>
                <fullName>PROCEDENCIA</fullName>
            </value>
            <value>
                <fullName>¿DONDE CONTRATA?</fullName>
            </value>
            <value>
                <fullName>FORMA DE PAGO</fullName>
            </value>
            <value>
                <fullName>RESPONSABLE DEL PAGO</fullName>
            </value>
            <value>
                <fullName>PAÍS DE ORIGEN</fullName>
            </value>
            <value>
                <fullName>LOCALIZACIÓN GEOGRÁFICA DEL CLIENTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>