force-app/main/default/objects/Account/fields/Cliente_Activo__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Activo</label>
    <type>Checkbox</type>
</CustomField>