force-app/main/default/objects/Account/fields/CODDEPARTAMENTO__c.field-meta.xml
<CustomField>
    <fullName>CODDEPARTAMENTO__c</fullName>
    <label>Código del departamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>