force-app/main/default/objects/Account/fields/CodigoCiudad__c.field-meta.xml
<CustomField>
    <fullName>CodigoCiudad__c</fullName>
    <label>Código de la ciudad</label>
    <length>16</length>
    <type>Text</type>
</CustomField>