force-app/main/default/objects/Account/fields/CodigoPais__c.field-meta.xml
<CustomField>
    <fullName>CodigoPais__c</fullName>
    <label>Código del país</label>
    <length>16</length>
    <type>Text</type>
</CustomField>