force-app/main/default/objects/Account/fields/CODMUNICIPIO__c.field-meta.xml
<CustomField>
    <fullName>CODMUNICIPIO__c</fullName>
    <label>Código del municipio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>