force-app/main/default/objects/Account/fields/ConsecutivoTel__c.field-meta.xml
<CustomField>
    <fullName>ConsecutivoTel__c</fullName>
    <label>Consecutivo del número de teléfono</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>