force-app/main/default/objects/Account/fields/Contador__c.field-meta.xml
<CustomField>
    <fullName>Contador__c</fullName>
    <description>Indica si hay un registro ligado a Lista Negra.</description>
    <label>Contador</label>
    <summaryForeignKey>Lista_Negra__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>