force-app/main/default/objects/Account/fields/countrycode__c.field-meta.xml
<CustomField>
    <fullName>countrycode__c</fullName>
    <label>countrycode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>