force-app/main/default/objects/Account/fields/countycode__c.field-meta.xml
<CustomField>
    <fullName>countycode__c</fullName>
    <label>countycode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>