force-app/main/default/objects/Account/fields/Creado_desde_Sitio_Externo__c.field-meta.xml
<CustomField>
    <fullName>Creado_desde_Sitio_Externo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creado desde Sitio Externo</label>
    <type>Checkbox</type>
</CustomField>