force-app/main/default/objects/Account/fields/DiasVisitaRutaSec__c.field-meta.xml
<CustomField>
    <fullName>DiasVisitaRutaSec__c</fullName>
    <label>Días de visita de la ruta secundaria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>