force-app/main/default/objects/Account/fields/Direcci_n_Exacta__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_Exacta__c</fullName>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>