force-app/main/default/objects/Account/fields/DireccionLinea_1__c.field-meta.xml
<CustomField>
    <fullName>DireccionLinea_1__c</fullName>
    <label>Dirección del cliente linea 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>