force-app/main/default/objects/Account/fields/DireccionLinea_2__c.field-meta.xml
<CustomField>
    <fullName>DireccionLinea_2__c</fullName>
    <label>Dirección del cliente linea 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>