force-app/main/default/objects/Account/fields/DireccionLinea_3__c.field-meta.xml
<CustomField>
    <fullName>DireccionLinea_3__c</fullName>
    <label>Dirección del cliente linea 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>