force-app/main/default/objects/Account/fields/Documento_de_identidad__c.field-meta.xml
<CustomField>
    <fullName>Documento_de_identidad__c</fullName>
    <label>Documento de identidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cédula de identidad</fullName>
            </value>
            <value>
                <fullName>Cédula de residente</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>RUC</fullName>
            </value>
            <value>
                <fullName>D.U.I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>