force-app/main/default/objects/Account/fields/Donde_contrata__c.field-meta.xml
<CustomField>
    <fullName>Donde_contrata__c</fullName>
    <label>¿Donde contrata?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acahualinca</fullName>
            </value>
            <value>
                <fullName>Altamira</fullName>
            </value>
            <value>
                <fullName>Casa Matriz</fullName>
            </value>
            <value>
                <fullName>Chinandega</fullName>
            </value>
            <value>
                <fullName>Estelí</fullName>
            </value>
            <value>
                <fullName>Juigalpa</fullName>
            </value>
            <value>
                <fullName>León</fullName>
            </value>
            <value>
                <fullName>Mall Las Américas</fullName>
            </value>
            <value>
                <fullName>Masaya</fullName>
            </value>
            <value>
                <fullName>Matagalpa</fullName>
            </value>
            <value>
                <fullName>Moto Plaza PE.</fullName>
            </value>
            <value>
                <fullName>Puerto Cabezas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>