force-app/main/default/objects/Account/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>ABS( FLOOR( ( TODAY() - PersonBirthdate ) / 365 )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>