force-app/main/default/objects/Account/fields/Email_representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Email_representante_legal__c</fullName>
    <formula>Representante_Legal__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email representante legal</label>
    <type>Text</type>
</CustomField>