force-app/main/default/objects/Account/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>Correo electrónico</label>
    <length>32</length>
    <type>Text</type>
</CustomField>