force-app/main/default/objects/Account/fields/EmailContacto__c.field-meta.xml
<CustomField>
    <fullName>EmailContacto__c</fullName>
    <formula>NombreContacto__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo electrónico del contacto</label>
    <type>Text</type>
</CustomField>