force-app/main/default/objects/Account/fields/ENTITYLONGID__c.field-meta.xml
<CustomField>
    <fullName>ENTITYLONGID__c</fullName>
    <label>ENTITYLONGID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>