force-app/main/default/objects/Account/fields/ENTITYTAXID__c.field-meta.xml
<CustomField>
    <fullName>ENTITYTAXID__c</fullName>
    <label>ENTITYTAXID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>