force-app/main/default/objects/Account/fields/ENTITYTYPECODE__c.field-meta.xml
<CustomField>
    <fullName>ENTITYTYPECODE__c</fullName>
    <label>ENTITYTYPECODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>