force-app/main/default/objects/Account/fields/EstadoRutaPrimaria__c.field-meta.xml
<CustomField>
    <fullName>EstadoRutaPrimaria__c</fullName>
    <label>Estado de la ruta primaria</label>
    <length>32</length>
    <type>Text</type>
</CustomField>