force-app/main/default/objects/Account/fields/EstadoRutaSecundaria__c.field-meta.xml
<CustomField>
    <fullName>EstadoRutaSecundaria__c</fullName>
    <label>Estado de la ruta secundaria</label>
    <length>32</length>
    <type>Text</type>
</CustomField>