force-app/main/default/objects/Account/fields/Extranjero__c.field-meta.xml
<CustomField>
    <fullName>Extranjero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extranjero</label>
    <type>Checkbox</type>
</CustomField>