force-app/main/default/objects/Account/fields/extranjeroaux__c.field-meta.xml
<CustomField>
    <fullName>extranjeroaux__c</fullName>
    <label>extranjeroaux</label>
    <length>255</length>
    <type>Text</type>
</CustomField>