force-app/main/default/objects/Account/fields/Factor__c.field-meta.xml
<CustomField>
    <fullName>Factor__c</fullName>
    <label>Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factor Cliente</fullName>
            </value>
            <value>
                <fullName>Factor canal de distribución</fullName>
            </value>
            <value>
                <fullName>Factor producto</fullName>
            </value>
            <value>
                <fullName>Factores Geográficos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>