force-app/main/default/objects/Account/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha de la última actualización</label>
    <length>30</length>
    <type>Text</type>
</CustomField>