force-app/main/default/objects/Account/fields/Fecha_de_ultima_actualizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_ultima_actualizacion__c</fullName>
    <label>Fecha de última actualización</label>
    <type>Date</type>
</CustomField>