force-app/main/default/objects/Account/fields/Fecha_inicio_PEP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inicio_PEP__c</fullName>
    <label>Fecha inicio PEP</label>
    <type>Date</type>
</CustomField>