force-app/main/default/objects/Account/fields/FVisitaPrimaria__c.field-meta.xml
<CustomField>
    <fullName>FVisitaPrimaria__c</fullName>
    <label>Frecuencia de visita primaria</label>
    <length>32</length>
    <type>Text</type>
</CustomField>