force-app/main/default/objects/Account/fields/FVisitaSecundaria__c.field-meta.xml
<CustomField>
    <fullName>FVisitaSecundaria__c</fullName>
    <label>Frecuencia de visita secundaria</label>
    <length>32</length>
    <type>Text</type>
</CustomField>