force-app/main/default/objects/Account/fields/Identificaci_n_representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Identificaci_n_representante_legal__c</fullName>
    <formula>Representante_Legal__r.Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificación representante legal</label>
    <type>Text</type>
</CustomField>