force-app/main/default/objects/Account/fields/Identification__c.field-meta.xml
<CustomField>
    <fullName>Identification__c</fullName>
    <label>Identificación (deprecado)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>