force-app/main/default/objects/Account/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <label>IdExterno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>