force-app/main/default/objects/Account/fields/Imagen_Identificacion_1__c.field-meta.xml
<CustomField>
    <fullName>Imagen_Identificacion_1__c</fullName>
    <formula>IMAGE( Imagen_Identificacion_1_URL__c , &quot;Texto&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen Identificacion 1</label>
    <type>Text</type>
</CustomField>