force-app/main/default/objects/Account/fields/Imagen_Identificacion_1_URL__c.field-meta.xml
<CustomField>
    <fullName>Imagen_Identificacion_1_URL__c</fullName>
    <label>Imagen Identificacion 1 URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>