force-app/main/default/objects/Account/fields/Imagen_Identificacion_2__c.field-meta.xml
<CustomField>
    <fullName>Imagen_Identificacion_2__c</fullName>
    <formula>IMAGE( Imagen_Identificacion_2_URL__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen Identificacion 2</label>
    <type>Text</type>
</CustomField>