force-app/main/default/objects/Account/fields/Inactividad__c.field-meta.xml
<CustomField>
    <fullName>Inactividad__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check si la cuenta está inactiva</inlineHelpText>
    <label>Cliente inactivo</label>
    <type>Checkbox</type>
</CustomField>