force-app/main/default/objects/Account/fields/Incluido_en_Lista_Negra__c.field-meta.xml
<CustomField>
    <fullName>Incluido_en_Lista_Negra__c</fullName>
    <description>Si es TRUE, indica que la Cuenta (Cliente) tiene un registro incluido en Lista Negra.</description>
    <formula>Contador__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incluido en Lista Negra</label>
    <type>Checkbox</type>
</CustomField>