force-app/main/default/objects/Account/fields/Industria__c.field-meta.xml
<CustomField>
    <fullName>Industria__c</fullName>
    <label>Industria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjuntar industrias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>