force-app/main/default/objects/Account/fields/INDUSTRYCLASSIFICATIONCODE__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRYCLASSIFICATIONCODE__c</fullName>
    <label>INDUSTRYCLASSIFICATIONCODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>