force-app/main/default/objects/Account/fields/LineaNegocio__c.field-meta.xml
<CustomField>
    <fullName>LineaNegocio__c</fullName>
    <label>Linea de negocio</label>
    <length>32</length>
    <type>Text</type>
</CustomField>