force-app/main/default/objects/Account/fields/Lista_negra__c.field-meta.xml
<CustomField>
    <fullName>Lista_negra__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si el campo esta en true, luego la cuenta coincide con un valor de la lista negra.</description>
    <label>Lista negra</label>
    <type>Checkbox</type>
</CustomField>