force-app/main/default/objects/Account/fields/Localizacion_geografica__c.field-meta.xml
<CustomField>
    <fullName>Localizacion_geografica__c</fullName>
    <label>Localización geográfica del cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinandega</fullName>
            </value>
            <value>
                <fullName>Estelí</fullName>
            </value>
            <value>
                <fullName>Jinotega</fullName>
            </value>
            <value>
                <fullName>León</fullName>
            </value>
            <value>
                <fullName>Managua</fullName>
            </value>
            <value>
                <fullName>Masaya</fullName>
            </value>
            <value>
                <fullName>Matagalpa</fullName>
            </value>
            <value>
                <fullName>RACCN</fullName>
            </value>
            <value>
                <fullName>Granada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>