force-app/main/default/objects/Account/fields/MessagingPlatformKey__c.field-meta.xml
<CustomField>
    <fullName>MessagingPlatformKey__c</fullName>
    <externalId>true</externalId>
    <label>MessagingPlatformKey</label>
    <length>40</length>
    <type>Text</type>
</CustomField>