force-app/main/default/objects/Account/fields/ModifiedIn__c.field-meta.xml
<CustomField>
    <fullName>ModifiedIn__c</fullName>
    <description>Dirección de dónde fue modificado.</description>
    <label>Dirección de la modificación</label>
    <length>32</length>
    <type>Text</type>
</CustomField>