force-app/main/default/objects/Account/fields/ModifiedOn__c.field-meta.xml
<CustomField>
    <fullName>ModifiedOn__c</fullName>
    <description>Fecha de la última actualización en formato juliano.</description>
    <label>Última actualización (Juliano)</label>
    <length>16</length>
    <type>Text</type>
</CustomField>